assets/css/style.css
/*===============================================
Template Name: Arcke - Architecture & Interior Design HTML5 Template
Author:  https://themeforest.net/user/dreamit-solution
Description: Description
Version: 1.0.0
Text Domain: Arcke
Tags:       architect, architecture, architecture design, architecture portfolio, architecture studio, clean, furniture store, gallery, interior decoration, interior design, interior design portfolio, interior designer, modern, property
================================================*/
    
/*TABLE OF CONTENTS*/
/*=====================
01. Arcke top-menu-area Css
02. Arcke Nav Menu Area Css
03. Arcke breadcumb Area Css
04. Arcke section-title Css
05. Arcke Slider Area Css
06. Arcke feature-area Css
07. Arcke tag-area Css
08. Arcke about area Css
09. Arcke Prossess Ber Css
10. Arcke gallery area Css
11. Arcke counter area Css
12. Arcke service-area  Css
13. Arcke project all inner page Css
14. Arcke service-details-area Css
15. Arcke arcke-agency-area Css
16. Arcke pricing-area Css
17. Arcke project-area Css
18. Arcke call-do-action-area Css
19. Arcke contact area Css
20. Arcke map-section Css
21. Arcke team-area Css
22. Arcke team area inner page Css
23. Arcke testimonial-area Css
24. Arcke video-area-seven Css
25. Arcke blog-area Css
26. Arcke blog-details-area Css
27. Arcke cascading-area Css
28. Arcke horizontal-area Css
29. Arcke horizontal-slider-area Css
30. Arcke portfolio-masonary-area Css
31. Arcke portfolio-details-area Css
32. Arcke spilt-slider-area Css
33. Arcke brand-area Css
34. Arcke shop-area CSS
35. Arcke footer-section CSS
36. Arcke copyright-area Css
=======================*/


/*================================
<-- Arcke top-menu-area Css -->
==================================*/

.top-menu-area {
    background: #D8AB7A;
    padding: 10px 0;
}

.top-menu-area .top-menu-left h4.ma-ri {
    margin-right: 40px;
}

.top-menu-area .top-menu-left h4 {
    font-size: 14px;
    line-height: 30px;
    color: #ffffff;
    font-weight: 500;
    margin: 0 0 0;
    display: inline-block;
}

.top-menu-left h4 i {
    display: inline-block;
    margin-right: 5px;
}

.top-icon-list {
    text-align: right;
}

.top-icon-list ul li {
    display: inline-block;
    list-style: none;
    margin-left: 15px;
}

.top-icon-list ul li a {
    font-size: 15px;
    display: inline-block;
    color: #fff;
}

/*================================
<--  Arcke Nav Menu Area Css -->
==================================*/

.hendre_nav_manu {
    transition: .5s;
    z-index: 2;
    position: relative;
    padding: 10px 0px 10px 90px;
    background: #101010;
}

.hendre_nav_manu.two {
    background: #fff!important;
}

.hendre_nav_manu.three {
    border-bottom: 1px solid #1A1815;
    padding: 10px 0px 10px 0;
}

.sticky.hendre_nav_manu.three{
    background:#101010 !important;
}

.hendre_nav_manu.three .nav-btn.navSidebar-button i {
    color: #fff;
}

.hendre_nav_manu.four {
    border-bottom: 1px solid #F3E5D8;
    padding: 10px 0px 10px 0;
    background: inherit;
}

.hendre_nav_manu.four .hendre_menu>ul>li>a {
    color: #101010;
}

.sticky.hendre_nav_manu.four {
    background: inherit!important;
}

.hendre_nav_manu.four .nav-btn.navSidebar-button i {
    color: #101010;
}

.hendre_nav_manu.three .header-src-box {
    text-align: right;
}

.sticky.hendre_nav_manu {
    border-bottom: inherit;
}

.hendre_nav_manu.style-two {
    transition: .5s;
    z-index: 2;
    position: relative;
    padding: 0 100px;
    background: #fff;
}

.hendre_nav_manu.style-two .search-box-btn.search-box-outer i {
    color: #333;
}

.sticky.hendre_nav_manu.style-two .search-box-btn.search-box-outer i {
    color: #fff;
}

.hendre_nav_manu.style-two .hendre_menu>ul>li>a {
    color: #333;
}

.sticky.hendre_nav_manu.style-two .hendre_menu>ul>li>a {
    color: #fff!important;
}

.hendre_nav_manu.transparent_menu {
    background: transparent;
    margin-bottom: -87px;
    position: relative;
}

.sticky {
    left: 0;
    margin: auto;
    position: fixed !important;
    top: 0;
    width: 100%;
    -webkit-box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.1);
    box-shadow: 0 2px 5px -2px rgba(0, 0, 0, 0.1);
    background: #101010!important;
    transition: .5s;
    z-index: 9;
    animation: 500ms running fadeInUp;
    animation-name: slideInDown;
}

.header-src-box {
    text-align: center;
}

.header-icon {
    display: inline-block;
    margin: 0 25px 0 15px;
}

.header-icon.home-three {
    margin: 0 15px 0 15px;
}

.header-icon a {
    display: inline-block;
    position: relative;
    z-index: 1;
    color: #012549;
    font-size: 20px;
}

.sticky .header-icon a {
    color: #fff;

}

.header-icon a::after {
    position: absolute;
    content: "0";
    top: 0;
    right: -8px;
    height: 15px;
    width: 15px;
    line-height: 15px;
    background: #E01142;
    color: #fff;
    border-radius: 50%;
    text-align: center;
    font-size: 12px;
}

.header-button {
    display: inline-block;
}

.header-button a::after {
    position: absolute;
    content: "";
    top: 9px;
    left: -12px;
    height: 16px;
    width: 1px;
    background: #fff;
    opacity: 0.3;
}

.header-button a {
    display: inline-block;
    font-size: 15px;
    line-height: 30px;
    color: #ffffff;
    font-weight: 500;
    transition: .5s;
    position: relative;
    z-index: 1;
}

.header-button a i {
    font-size: 20px;
    display: inline-block;
    margin: 0 0 0 0;
    position: relative;
    left: 2px;
    top: 2px;
}

.header-button a:hover{
    color: #D7AB79;
}

.sticky .hendre_nav_manu.two {
    background: #fff!important;
}


.hendre_nav_manu.two .hendre_menu>ul>li>a {
    color: #101010;
}

.header-button.two a {
    display: inline-block;
    font-size: 15px;
    line-height: 30px;
    color: #101010;
    font-weight: 500;
    transition: .5s;
    position: relative;
    z-index: 1;
}
/* ... */

